# SmartFin-v2

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile.backend  Dockerfile.frontend  README.md  README.zh-CN.md  docker-compose.yml  pyproject.toml  requirements.txt
.claude/rules/: agents.md  code-principle.md  orchestrator.md  system-design.md  tests.md
.github/workflows/: README.md  cd-deploy.yml  ci-llmsecops.yml
app/: api.py  config.py  state.py
app/agents/: react_utils.py
app/guardrails/: __init__.py  input_filter.py  output_validator.py
app/memory/: __init__.py  embeddings.py  retriever.py  vector_store.py  writer.py
app/observability/: __init__.py  events.py  token_counter.py  tracer.py
app/orchestrator/: __init__.py  checkpoints.py  context.py  graph.py  intent_classifier.py  router.py  state_view.py
app/tools/: cache.py  memory_store.py  transaction_store.py
config/: model_registry.json
docs/: redis-prompt-caching-flow.md
evals/promptfoo/: assert.py  promptfooconfig.yaml
gateway/: config.yaml  guardrails.py
nginx/: Dockerfile  nginx.conf
scripts/: chat.py  llmsecops_ci.py
tests/: conftest.py
tests/evals/: assertions.py  conftest.py  loaders.py  provider.py  reporting.py  test_anomaly_eval.py  test_budget_eval.py  test_expense_eval.py  test_goal_eval.py  test_health_eval.py  test_intent_eval.py
tests/fixtures/: generate_transactions.py  sample_transactions.json
tests/integration/: test_agent_pipeline.py  (+1 more)
ui/: UI.md  app.py  index.html  package-lock.json  package.json  sessions.py  vite.config.ts
(+52 files in other folders)
